@@ -3,13 +3,10 @@ package team5.prototype.task;
 import jakarta.persistence.EntityNotFoundException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import team5.prototype.dto.ManagerDashboardDto;
-import team5.prototype.dto.ManagerTaskRowDto;
-import team5.prototype.dto.TaskDetailsDto;
-import team5.prototype.dto.TaskDetailsStepDto;
-import team5.prototype.taskstep.Priority;
+import team5.prototype.notification.NotificationService;
 import team5.prototype.taskstep.PriorityService;
 import team5.prototype.taskstep.TaskStep;
+import team5.prototype.taskstep.TaskStepDto;
 import team5.prototype.taskstep.TaskStepStatus;
 import team5.prototype.user.User;
 import team5.prototype.user.UserRepository;
@@ -17,9 +14,13 @@ import team5.prototype.workflow.definition.WorkflowDefinition;
 import team5.prototype.workflow.definition.WorkflowDefinitionRepository;
 import team5.prototype.workflow.step.WorkflowStep;
 
-import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -29,15 +30,18 @@ public class TaskServiceImpl implements TaskService {
     private final WorkflowDefinitionRepository definitionRepository;
     private final UserRepository userRepository;
     private final PriorityService priorityService;
+    private final NotificationService notificationService;
 
     public TaskServiceImpl(TaskRepository taskRepository,
                            WorkflowDefinitionRepository definitionRepository,
                            UserRepository userRepository,
-                           PriorityService priorityService) {
+                           PriorityService priorityService,
+                           NotificationService notificationService) {
         this.taskRepository = taskRepository;
         this.definitionRepository = definitionRepository;
         this.userRepository = userRepository;
         this.priorityService = priorityService;
+        this.notificationService = notificationService;
     }
 
     @Override
@@ -81,6 +85,7 @@ public class TaskServiceImpl implements TaskService {
     @Override
     @Transactional
     public void completeStep(Long taskId, Long stepId, Long userId) {
+        // --- DEIN BESTEHENDER, KORREKTER CODE (unveraendert) ---
         Task task = taskRepository.findById(taskId)
                 .orElseThrow(() -> new EntityNotFoundException("Task %d nicht gefunden".formatted(taskId)));
 
@@ -94,7 +99,7 @@ public class TaskServiceImpl implements TaskService {
             throw new IllegalArgumentException("Benutzer %d ist nicht dem Arbeitsschritt zugeordnet".formatted(userId));
         }
         if (step.getStatus() == TaskStepStatus.COMPLETED) {
-            return;
+            return; // Bereits erledigt, nichts zu tun.
         }
         if (step.getStatus() == TaskStepStatus.WAITING) {
             throw new IllegalStateException("Arbeitsschritt ist noch nicht aktiv.");
@@ -107,6 +112,21 @@ public class TaskServiceImpl implements TaskService {
         moveToNextStep(task, step);
         refreshPriorityForNotCompletedTaskSteps(task);
         taskRepository.save(task);
+
+        // ===================================================================
+        // NEU HINZUGEFUEGT: Benachrichtigung senden
+        // ===================================================================
+        // Wir erstellen ein aussagekraeftiges Objekt (Payload), das wir als JSON an das Frontend senden.
+        // Eine Map ist hierfuer sehr flexibel.
+        Map<String, Object> notificationPayload = Map.of(
+                "message", String.format("Arbeitsschritt '%s' (ID: %d) wurde abgeschlossen.", step.getWorkflowStep().getName(), stepId),
+                "taskId", taskId,
+                "completedStepId", stepId,
+                "newOverallTaskStatus", task.getStatus().name()
+        );
+
+        // Rufe den NotificationService auf, um das Payload an das richtige Topic zu senden.
+        notificationService.sendTaskUpdateNotification(taskId, notificationPayload);
     }
 
     @Override
@@ -130,46 +150,26 @@ public class TaskServiceImpl implements TaskService {
         );
     }
 
+    // NEUE METHODE: Gibt DTOs zurueck statt Entities
     @Override
     @Transactional(readOnly = true)
-    public TaskDetailsDto getTaskDetails(Long taskId) {
-        Task task = taskRepository.findById(taskId)
-                .orElseThrow(() -> new EntityNotFoundException("Task %d nicht gefunden".formatted(taskId)));
-        int totalSteps = task.getTaskSteps().size();
-        int completedSteps = (int) task.getTaskSteps().stream()
-                .filter(step -> step.getStatus() == TaskStepStatus.COMPLETED)
-                .count();
-        Priority priority = resolveTaskPriority(task);
-        List<TaskDetailsStepDto> stepDtos = task.getTaskSteps().stream()
-                .sorted(Comparator.comparingInt(step -> step.getWorkflowStep().getSequenceOrder()))
-                .map(this::toTaskDetailsStep)
-                .toList();
-        return new TaskDetailsDto(task.getId(), task.getTitle(), priority, task.getDeadline(),
-                completedSteps, totalSteps, stepDtos);
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public ManagerDashboardDto getManagerDashboard() {
+    public List<TaskDto> getAllTasksAsDto() {
         List<Task> tasks = taskRepository.findAll();
-        LocalDate today = LocalDate.now();
-        long openTasks = tasks.stream()
-                .filter(task -> task.getStatus() != TaskStatus.COMPLETED)
-                .count();
-        long overdueTasks = tasks.stream()
-                .filter(task -> task.getStatus() != TaskStatus.COMPLETED)
-                .filter(task -> task.getDeadline().isBefore(today.atStartOfDay()))
-                .count();
-        long dueTodayTasks = tasks.stream()
-                .filter(task -> task.getStatus() != TaskStatus.COMPLETED)
-                .filter(task -> task.getDeadline().toLocalDate().equals(today))
-                .count();
-        List<ManagerTaskRowDto> rows = tasks.stream()
-                .map(this::toManagerTaskRow)
-                .toList();
-        return new ManagerDashboardDto(openTasks, overdueTasks, dueTodayTasks, rows);
+        // Konvertierung INNERHALB der Transaction
+        return tasks.stream()
+                .map(this::convertToDto)
+                .collect(Collectors.toList());
     }
 
+    // NEUE METHODE: Gibt DTO zurueck statt Entity
+    @Override
+    @Transactional(readOnly = true)
+    public Optional<TaskDto> getTaskByIdAsDto(Long taskId) {
+        return taskRepository.findById(taskId)
+                .map(this::convertToDto);
+    }
+
+    // ALTE Methoden bleiben fuer Kompatibilitaet
     @Override
     @Transactional(readOnly = true)
     public List<Task> getAllTasks() {
@@ -181,6 +181,43 @@ public class TaskServiceImpl implements TaskService {
     public Optional<Task> getTaskById(Long taskId) {
         return taskRepository.findById(taskId);
     }
+
+    // --- Private Konvertierungs-Hilfsmethoden ---
+
+    private TaskDto convertToDto(Task task) {
+        TaskDto dto = new TaskDto();
+        dto.setId(task.getId());
+        dto.setTitle(task.getTitle());
+        dto.setDeadline(task.getDeadline());
+        if (task.getStatus() != null) {
+            dto.setStatus(task.getStatus().name());
+        }
+
+        if (task.getTaskSteps() != null) {
+            List<TaskStepDto> stepDtos = task.getTaskSteps().stream()
+                    .map(this::convertStepToDto)
+                    .collect(Collectors.toList());
+            dto.setSteps(stepDtos);
+        }
+        return dto;
+    }
+
+    private TaskStepDto convertStepToDto(TaskStep step) {
+        TaskStepDto dto = new TaskStepDto();
+        dto.setId(step.getId());
+        if (step.getWorkflowStep() != null) {
+            dto.setName(step.getWorkflowStep().getName());
+        }
+        if (step.getStatus() != null) {
+            dto.setStatus(step.getStatus().name());
+        }
+        if (step.getAssignedUser() != null) {
+            dto.setAssignedUsername(step.getAssignedUser().getUsername());
+        }
+        return dto;
+    }
+
+    // --- Private Hilfsmethoden ---
 
     private void moveToNextStep(Task task, TaskStep completedStep) {
         List<TaskStep> steps = task.getTaskSteps();
@@ -210,12 +247,14 @@ public class TaskServiceImpl implements TaskService {
         for (int index = 0; index < orderedSteps.size(); index++) {
             WorkflowStep workflowStep = orderedSteps.get(index);
             User assignee = resolveAssignee(workflowStep, overrides, task.getTenant().getId());
+
+            // KORREKTUR: Wir setzen hier KEINE Prioritaet mehr, da dies spaeter zentral geschieht.
             TaskStep.TaskStepBuilder builder = TaskStep.builder()
                     .task(task)
                     .workflowStep(workflowStep)
                     .assignedUser(assignee)
-                    .status(index == 0 ? TaskStepStatus.ASSIGNED : TaskStepStatus.WAITING)
-                    .priority(Priority.MEDIUM_TERM);
+                    .status(index == 0 ? TaskStepStatus.ASSIGNED : TaskStepStatus.WAITING);
+
             if (index == 0) {
                 builder.assignedAt(now);
             }
@@ -230,9 +269,7 @@ public class TaskServiceImpl implements TaskService {
                 .forEach(step -> step.setPriority(priorityService.calculatePriority(step)));
     }
 
-    private User resolveAssignee(WorkflowStep workflowStep,
-                                 Map<Long, Long> overrides,
-                                 Long tenantId) {
+    private User resolveAssignee(WorkflowStep workflowStep, Map<Long, Long> overrides, Long tenantId) {
         if (overrides != null && overrides.containsKey(workflowStep.getId())) {
             return findUser(overrides.get(workflowStep.getId()));
         }
@@ -249,53 +286,5 @@ public class TaskServiceImpl implements TaskService {
 
     private LocalDateTime now() {
         return LocalDateTime.now();
-    }
-
-    private Priority resolveTaskPriority(Task task) {
-        return task.getTaskSteps().stream()
-                .filter(step -> step.getStatus() != TaskStepStatus.COMPLETED)
-                .sorted(Comparator.comparingInt(step -> step.getWorkflowStep().getSequenceOrder()))
-                .map(TaskStep::getPriority)
-                .findFirst()
-                .orElse(null);
-    }
-
-    private ManagerTaskRowDto toManagerTaskRow(Task task) {
-        int totalSteps = task.getTaskSteps().size();
-        int completedSteps = (int) task.getTaskSteps().stream()
-                .filter(step -> step.getStatus() == TaskStepStatus.COMPLETED)
-                .count();
-        Priority priority = resolveTaskPriority(task);
-        return new ManagerTaskRowDto(task.getId(), task.getTitle(), priority, completedSteps, totalSteps);
-    }
-
-    private TaskDetailsStepDto toTaskDetailsStep(TaskStep step) {
-        String assigneeName = formatAssigneeName(step.getAssignedUser());
-        LocalDateTime dueDate = resolveStepDueDate(step);
-        return new TaskDetailsStepDto(
-                step.getId(),
-                step.getWorkflowStep().getName(),
-                step.getStatus(),
-                assigneeName,
-                dueDate,
-                step.getPriority()
-        );
-    }
-
-    private LocalDateTime resolveStepDueDate(TaskStep step) {
-        if (step.getAssignedAt() == null) {
-            return null;
-        }
-        return step.getAssignedAt().plusHours(step.getWorkflowStep().getDurationHours());
-    }
-
-    private String formatAssigneeName(User user) {
-        if (user == null) {
-            return null;
-        }
-        String first = Optional.ofNullable(user.getFirstName()).orElse("").trim();
-        String last = Optional.ofNullable(user.getLastName()).orElse("").trim();
-        String full = (first + " " + last).trim();
-        return full.isEmpty() ? user.getUsername() : full;
     }
 }
